# QRScan

./: .gitignore  README.md  cursor_rules.md  prompt.txt  pyproject.toml
qrscan/: __init__.py  agent.py  pdf_reader.py  qr_decoder.py  result_writer.py  url_checker.py
tests/: test_agent.py  test_pdf_reader.py  test_qr_decoder.py  test_result_writer.py  test_url_checker.py
